[package]
name = "yak"
version = "0.1.0"
authors = ["Daniel (dmilith) Dettlaff <dmilith@me.com>"]


[dependencies]
walkdir = "0.1"
encoding = "0.2"
ammonia = "0.1"
time = "0.1"
regex = "0.1"
sha1 = "0.1"
lazy_static = "0.1"
rustc-serialize = "0.3"
# nickel = "*"
# websocket = "0.15.0"


# language detection:
[dependencies.cld2]
git = "git://github.com/emk/rust-cld2"
