[package]
name = "yak"
version = "0.3.2"
authors = ["Daniel (dmilith) Dettlaff <dmilith@me.com>"]


[dependencies]
uuid = "0.1"
walkdir = "0.1"
encoding = "0.2"
ammonia = "0.1"
time = "0.1"
regex = "0.1"
sha1 = "0.1"
lazy_static = "0.1"
rustc-serialize = "0.3"
users = "0.5"
curl = "0.2"
log = "0.3"
env_logger = "0.3"
rsgenetic = "1.1"
rand = "0.3"
flame = "0.1"
difference = "0.4"
bincode = "0.5"
term = "0.4"
flate2 = { version = "0.2", features = ["zlib"], default-features = false }
rayon = "0.3"
# nickel = "*"


# language detection:
[dependencies.cld2]
git = "git://github.com/emk/rust-cld2"

[dev-dependencies]
env_logger = "0.3"
